# volume_optimal_conformal

./: .gitignore  README.md  pyproject.toml
notebooks/: dataset_visualisation.ipynb
notebooks/datasets/: scm1d_exploration.ipynb  scm20d_exploration.ipynb
notebooks/plots/: figure_1_discrete_ot.ipynb  figure_1_flow_matching_rearranged.ipynb  figure_1_neural_ot.ipynb  figure_1_neural_ot_rearranged.ipynb  figure_1_normalizing_flows_rearranged.ipynb
notebooks/profiling/: figure_1_neural_ot_rearranged_sinusoidal.ipynb
notebooks/sandbox/: conformal_calibration.ipynb  datasets.ipynb  figure_1_neural_ot_amortized_rearranged_sinusoidal.ipynb  figure_1_neural_ot_rearranged.ipynb  figure_1_neural_ot_rearranged_sinusoidal.ipynb  figure_1_normalizing_flow_rearranged.ipynb  neural_ot_predictor.pt  neural_ot_predictor_new.pt  normalizing_flow_predictor.pt  parameter_count.ipynb  predictor_training.ipynb
src/calibrators/: __init__.py  base.py  elliptic_calibrator.py  factory.py  no_calibrator.py  norm_calibrator.py  optimal_transport_calibrator.py  quantile.py
src/configs/: conformal.py
src/conformal/: __init__.py  conformal_predictor.py  transport_based_conformal_predictor.py
src/data/: __init__.py  loaders.py
src/experimentation/: __init__.py  config.py  factories.py  runner.py
src/networks/: __init__.py  experimental_dense_skew_vector_field.py  mlp_vector_field.py  picnn.py  standard_scaler.py
src/predictors/: __init__.py  base.py  regression.py
src/trainers/: __init__.py  base.py  regression.py
src/utils/: __init__.py  parameters_count.py
(+86 files in other folders)
