[project]
name = "minimal-volume-vector-quantile-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.24.1",
    "cvxpy>=1.7.1",
    "geomloss>=0.2.6",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pot>=0.9.5",
    "pydantic>=2.11.7",
    "pyqt5>=5.15.11",
    "pyqt6>=6.9.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "taskipy>=1.14.1",
    "yapf>=0.40.2",
    "pooch>=1.8.2",
    "tqdm-pathos>=0.4",
    "statsmodels>=0.14.5",
    "seaborn>=0.13.2",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.3",
    "nbconvert>=7.17.1",
    "torchdiffeq>=0.2.5",
]

[tool.taskipy.tasks]
format = "yapf -i -r src"

[tool.yapf]
based_on_style = "pep8"
column_limit = 88
dedent_closing_brackets = true

[tool.uv]
package = true
